--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,4 @@
 @import './componentes/cabecalho';
 @import './componentes/projetos';
 @import './componentes/footer';
+@import './componentes/banner';
