--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,12 @@
   color: black;
   text-decoration: none;
   font-size: 1em;
-  margin-left: 1em;
+  margin-left: 1.2em;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .projetos {
-  margin-top: 200px;
+  margin-top: 100px;
 }
 .projetos .titulos {
   font-family: Arial, Helvetica, sans-serif;
@@ -129,7 +129,7 @@
 }
 .footer .footer-posi .footer-desc {
   margin-left: 80px;
-  margin-bottom: 90px;
+  margin-bottom: 80px;
   line-height: 25px;
   width: 300px;
 }
@@ -165,5 +165,150 @@
   .footer .footer-posi .footer-desc {
     margin-bottom: 40px;
     margin-left: 30px;
+  }
+}
+.banner {
+  margin-top: 200px;
+}
+.banner .slider {
+  margin: 0 auto;
+  width: 1200px;
+  height: 700px;
+  overflow: hidden;
+}
+.banner .slider .slides {
+  width: 400%;
+  height: 400px;
+  display: flex;
+}
+.banner .slider .slides .slide {
+  width: 25%;
+  position: relative;
+  transition: 1s;
+}
+.banner .slider .slides .slide img {
+  width: 1400px;
+}
+.banner .slider .slides input {
+  display: none;
+}
+.banner .slider .manual-navigation {
+  position: absolute;
+  width: 1200px;
+  margin-top: 250px;
+  display: flex;
+  justify-content: center;
+}
+.banner .slider .manual-navigation .manual-btn {
+  border: 2px solid #fff;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.55s;
+}
+.banner .slider .manual-navigation .manual-btn:not(:last-child) {
+  margin-right: 20px;
+}
+.banner .slider .manual-navigation .manual-btn:hover {
+  background-color: #fff;
+}
+.banner .slider #radio1:checked ~ .first {
+  margin-left: 0;
+}
+.banner .slider #radio2:checked ~ .first {
+  margin-left: -25%;
+}
+.banner .slider #radio3:checked ~ .first {
+  margin-left: -50%;
+}
+.banner .slider #radio4:checked ~ .first {
+  margin-left: -75%;
+}
+.banner .slider .navigation-auto div {
+  border: 2px solid #20a6ff;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.banner .slider .navigation-auto {
+  position: absolute;
+  width: 1200px;
+  margin-top: 650px;
+  display: flex;
+  justify-content: center;
+}
+.banner .slider .navigation-auto div:not(:last-child) {
+  margin-right: 20px;
+}
+.banner .slider #radio1:checked ~ .navigation-auto .auto-btn1 {
+  background-color: #fff;
+}
+.banner .slider #radio2:checked ~ .navigation-auto .auto-btn2 {
+  background-color: #fff;
+}
+.banner .slider #radio3:checked ~ .navigation-auto .auto-btn3 {
+  background-color: #fff;
+}
+.banner .slider #radio4:checked ~ .navigation-auto .auto-btn4 {
+  background-color: #fff;
+}
+
+@media screen and (max-width: 1024px) {
+  .banner .slider {
+    margin: 0 auto;
+    width: 600px;
+    height: 300px;
+    overflow: hidden;
+  }
+  .banner .slider .slides {
+    width: 400%;
+    height: 300px;
+    display: flex;
+  }
+  .banner .slider .slides .slide {
+    width: 25%;
+    position: relative;
+    transition: 1s;
+  }
+  .banner .slider .slides .slide img {
+    width: 600px;
+  }
+  .banner .slider .manual-navigation {
+    width: 600px;
+    margin-top: -20px;
+  }
+  .banner .slider .navigation-auto {
+    width: 600px;
+    margin-top: 280px;
+  }
+}
+@media screen and (max-width: 661px) {
+  .banner .slider {
+    margin: 0 auto;
+    width: 300px;
+    height: 150px;
+    overflow: hidden;
+  }
+  .banner .slider .slides {
+    width: 400%;
+    height: 150px;
+    display: flex;
+  }
+  .banner .slider .slides .slide {
+    width: 25%;
+    position: relative;
+    transition: 1s;
+  }
+  .banner .slider .slides .slide img {
+    width: 300px;
+  }
+  .banner .slider .manual-navigation {
+    width: 300px;
+    margin-top: -20px;
+  }
+  .banner .slider .navigation-auto {
+    width: 300px;
+    margin-top: 130px;
   }
 }/*# sourceMappingURL=style.css.map */
