--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,82 @@
 * {
   padding: 0;
   margin: 0;
-}
-
-.cabecalho-principal {
-  background-color: white;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  width: 100%;
-  height: 150px;
-  box-shadow: 0 8px 10px -12px black;
-}
-.cabecalho-principal .logo {
-  width: 120px;
-  padding: 2em;
-}
-.cabecalho-principal .menu {
-  display: flex;
-}
-.cabecalho-principal .menu .menu__links {
-  color: black;
-  text-decoration: none;
-  font-size: 1em;
-  margin-left: 1.2em;
+  scroll-behavior: smooth;
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.cabecalho {
+  top: 0;
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  z-index: 100;
+  font-weight: 100;
+}
+.cabecalho .nav-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 6rem;
+  align-items: center;
+}
+.cabecalho .nav-bar .logo img {
+  width: 100px;
+}
+.cabecalho .nav-bar .nav-item {
+  display: inline-block;
+  margin: 0 15px;
+}
+.cabecalho .nav-bar .nav-item .navbar__link {
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  transition: 1s;
+}
+.cabecalho .nav-bar .mobile-menu-icon {
+  display: none;
+}
+.cabecalho .nav-bar .mobile-menu {
+  display: none;
+}
+
+@media screen and (max-width: 1170px) {
+  .cabecalho .nav-bar {
+    padding: 1rem 4rem;
+  }
+  .cabecalho .nav-bar .nav-item {
+    display: none;
+  }
+  .cabecalho .nav-bar .mobile-menu-icon {
+    display: block;
+  }
+  .cabecalho .nav-bar .mobile-menu-icon button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+  .cabecalho .nav-bar .mobile-menu-icon button .bx {
+    color: black;
+    font-size: 40px;
+  }
+  .cabecalho .nav-bar .mobile-menu {
+    position: absolute;
+    right: 0;
+    top: 100px;
+  }
+  .cabecalho .nav-bar .mobile-menu ul {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 20px;
+  }
+  .cabecalho .nav-bar .mobile-menu ul .nav-item {
+    display: block;
+    padding-top: 2rem;
+  }
+  .cabecalho .nav-bar .open {
+    display: block;
+  }
+}
 .projetos {
   margin-top: 100px;
 }
@@ -168,7 +215,7 @@
   }
 }
 .banner {
-  margin-top: 200px;
+  margin-top: 180px;
 }
 .banner .slider {
   margin: 0 auto;
@@ -316,5 +363,66 @@
   }
   .banner .slider .navigation-auto div {
     padding: 4px;
+  }
+}
+.principal {
+  height: 750px;
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.principal h1 {
+  font-size: 50px;
+  width: 600px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.principal h1 strong {
+  color: #ffbc00;
+}
+.principal p {
+  font-size: 20px;
+  font-weight: 100;
+  width: 800px;
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 30px;
+  color: #838383;
+}
+.principal a {
+  border-radius: 20px;
+  margin-top: 40px;
+  text-decoration: none;
+  color: black;
+  color: #fff;
+  padding: 20px 40px;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #000000;
+  box-shadow: 0 8px 10px -12px black;
+}
+
+@media screen and (max-width: 870px) {
+  .principal h1 {
+    width: 400px;
+  }
+  .principal p {
+    width: 500px;
+  }
+}
+@media screen and (max-width: 570px) {
+  .principal {
+    margin-top: 300px;
+  }
+  .principal h1 {
+    font-size: 40px;
+    width: 200px;
+    text-align: center;
+  }
+  .principal p {
+    width: 300px;
   }
 }/*# sourceMappingURL=style.css.map */
