--- a/css/style.scss
+++ b/css/style.scss
@@ -2,3 +2,4 @@
 @import './componentes/projetos';
 @import './componentes/footer';
 @import './componentes/banner';
+@import './componentes/principal';
