--- a/css/componentes/_cabecalho.scss
+++ b/css/componentes/_cabecalho.scss
@@ -10,7 +10,7 @@
     background-color: white;
     width: 100%;
     z-index: 100;
-    font-weight: 100;
+    
     .nav-bar  {
         display: flex;
         justify-content: space-between;
@@ -25,8 +25,8 @@
             .navbar__link{
                 color: black;
                 text-decoration: none;
-                font-size: 18px;
-                transition: 1s;
+                font-size: 16px;
+                font-weight: lighter;
             }
         }
         .mobile-menu-icon {
@@ -58,6 +58,7 @@
                 }
             }
             .mobile-menu {
+                
                 position: absolute;
                 right: 0;
                 top: 100px;
